# URE

./: .gitignore  Makefile  README.md  deps  frames_2025-11-05_13.17.39.gv  frames_2026-04-11_01.27.01.gv  launch  pi_wpa_cli  pyvenv.cfg  requirements.txt
archive/: CTestConfiguration.ini  control_hw_interface.cpp  encoder_old.py  frames_2025-11-07_13.14.04.gv
archive/cleanup-mecanum-cruft/: README.txt
archive/cv2_calib_medum/: try2.py  try3.py  try4.py
archive/cv_basics/: package.xml
archive/encoder_pkg/encoder_pkg/: encoder_node.py
archive/motor_pwm_pkg/: setup.py
archive/motor_pwm_pkg/launch/: motor_pwm_launch.py
archive/motor_pwm_pkg/motor_pwm_pkg/: dual_motor_node.py  motor_pwm_node.py
archive/robot_hardware/config/: robot_hardware.yaml
archive/stereo_cameras/: setup.cfg  setup.py
aux/: pi_setup_ros_bash.txt
aux/maps/: my_lab.pgm  my_lab.yaml  my_lab2.yaml  my_lab_clean.pgm  my_lab_clean.xcf  my_map.pgm
maps/: my_lab.yaml_backup  my_lab2.pgm  my_map.yaml
robot_description/urdf/: tank.urdf.xarco
src/: changelog
src/cv_basics/: setup.py
src/cv_basics/cv_basics/: webcam_sub.py
src/cv_basics/launch/: cv_basics_launch.py
src/encoder_pkg/: package.xml  setup.py
src/encoder_pkg/encoder_pkg/: encoder_node.py
src/encoder_pkg/launch/: encoder_launch.py
src/follow/: package.xml  setup.py
src/follower/: package.xml  setup.py
src/mecanum_hardware_interface/: package.xml  setup.cfg  setup.py
src/mecanum_stack_bringup/: CMakeLists.txt  REAL_ROBOT_LAUNCH_MATRIX.md  package.xml
src/mecanum_stack_bringup/config/ekf/: stack_ekf.yaml  stack_ekf_odom_only.yaml
src/mecanum_stack_bringup/config/nav2/: localization.yaml  navigation.yaml
src/mecanum_stack_bringup/config/sim/: kinematic_sim.yaml  kinematic_sim_nav.yaml
src/mecanum_stack_bringup/launch/: mecanum_full_stack.launch.py  mecanum_sim_stack.launch.py  mecanum_sim_test.launch.py  real_robot_mapping.launch.py  real_robot_navigation.launch.py  real_robot_teleop.launch.py
src/mecanum_stack_bringup/scripts/: mecanum_kinematic_sim.py
src/motor_pwm_pkg/: package.xml  setup.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: ekf.yaml  ekf_odom_only.yaml  slam_toolbox_params.yaml
src/robot_bringup/launch/: ekf.launch.py  mecanum_bringup.launch.py  robot_bringup.launch.py  slam_launch.py  tank_bringup_launch_superfull.py
src/robot_description_pkg/: package.xml  setup.py
src/robot_hardware/: CMakeLists.txt  package.xml
src/robot_navigation/: assisted_teleop.py  nav_to_pose.py  package.xml  posestamped_msg_generator.py
src/stereo_cameras/: package.xml
(+47 files in other folders)
