<?xml version="1.0"?>
<package format="3">
  <name>mecanum_stack_bringup</name>
  <version>0.1.0</version>
  <description>Unified mecanum bringup, decoupled Nav2 / localization / EKF configs.</description>
  <maintainer email="you@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>mecanum_hardware_interface</exec_depend>
  <exec_depend>robot_bringup</exec_depend>
  <exec_depend>robot_description_pkg</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>ros2_mpu6050</exec_depend>
  <exec_depend>hc_sr04_pkg</exec_depend>
  <exec_depend>follow</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
